stylesheets/ruby-strftime-reference.less
@import "ui-variables";

.ruby-strftime-reference {
  font-size: 12px;
  max-height: 300px;
  overflow: scroll;
  h1 {
    font-size: 14px;
    text-align: center;
    margin-top: 8px;
  }
  h2 {
    font-size: 13px;
    text-align: center;
    margin: 0 0 5px;
    color: lighten(@text-color, 15%);
  }
  table {
    width: 100%;
  }
  td {
    padding: 5px;
    &.directive {
      vertical-align: top;
      text-align: right;
      font-size: 110%;
    }
    &.description {
      padding-top: 6px;
    }
    .example {
      margin: 0;
      & > * {
        width: auto;
      }
      .directive {
        margin-right: 1em;
      }
    }
  }
  .directive {
    color: lighten(@text-color, 20%);
  }
}

